login: Fix scroll overlay page
Login and scroll page were overflowing. This workaround is a bit funky due to the overflow placement, but it'll do

--- a/files/assets/css/main-dev.css
+++ b/files/assets/css/main-dev.css
@@ -130,6 +130,21 @@ nav {
 /*     display: flex; */
 /* } */
 
+#register-form-container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 460px;
+    padding: 40px;
+    flex: 1;
+    overflow: auto;
+}
+
+#register-form {
+    flex: 0 0 58.3333333333%;
+    align-self: center;
+    min-width: 300px;
+}
+
 #login {
     position: absolute;
     left: 0;
@@ -152,13 +167,19 @@ nav {
     #login .splash-wrapper
     {
         z-index: -999;
-        position: absolute;
+        position: fixed;
         display: block;
         right: 0;
         top: 0;
         width: 100%;
         height: 100%;
         filter: contrast(0.4) blur(12px) sepia(20%) saturate(180%) brightness(30%);
+        
+    }
+    #register-form {
+        flex: 0 0 58.3333333333%;
+        align-self: center;
+        min-width: 10px;
     }
     #login input
     {
@@ -169,19 +190,6 @@ nav {
     {
         text-align:  center;
     }
-}
-
-#register-form-container {
-    display: flex;
-    flex: 1;
-    justify-content: center;
-
-}
-
-#register-form {
-    flex: 0 0 58.3333333333%;
-    align-self: center;
-    min-width: 100px;
 }
 
 .splash-wrapper
